--- a/pom.xml
+++ b/pom.xml
@@ -17,5 +17,12 @@
   </dependencies>
   <build>
     <finalName>Maven-Project</finalName>
+     <plugins>
+      <plugin>
+      <groupId>org.sonarsource.scanner.maven</groupId>
+      <artifactId>sonar-maven-plugin</artifactId>
+      <version>5.0.0.XXX</version> <!-- get the latest -->
+     </plugin>
+    </plugins>
   </build>
 </project>
