--- a/pom.xml
+++ b/pom.xml
@@ -20,8 +20,8 @@
      <plugins>
       <plugin>
       <groupId>org.sonarsource.scanner.maven</groupId>
-      <artifactId>sonar-maven-plugin</artifactId>
-      <version>5.0.0.XXX</version> <!-- get the latest -->
+<artifactId>sonar-maven-plugin</artifactId>
+<version>3.7.0.1746</version> <!-- get the latest -->
      </plugin>
     </plugins>
   </build>
